change name in package.json (toLowerCase)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "isMongoObjectID",
+  "name": "ismongoobjectid",
   "version": "0.0.1",
   "description": "Super fast function to check if a String is a MongoDB ObjectID based on ES6 Sets.",
   "main": "index.js",
